--- a/style.css
+++ b/style.css
@@ -1,23 +1,65 @@
 canvas {display: block;}
+ol,ul{list-style: none;}
+*{margin:0;padding:0;}
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+ }
 #xxx{
-  background:green;
+  background:white;
   display:block;
 }
 body{
-  margin:0
+  overflow: hidden;
 }
 .actions{
   position:fixed;
-   bottom:0;
+   top:0;
    left:0;
+   padding:20px;
 }
-
-.actions>#brush{
-  display:none;
+.actions svg{
+    height: 1.5em;
+    width: 1.5em;
+    transition: all 0.3s;
+    margin: 0 5px;
 }
-.actions.x >#brush{
-  display:inline-block;
+.actions svg.active{
+    fill:red;
+    transform: scale(1.2);
 }
-.actions.x >#eraser{
-  display:none;
+.colors{
+    position:fixed;
+    top: 58px;
+    left:27px;
+   
+}
+.colors>li{
+    height: 20px;
+    width:20px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+    margin:10px 0;
+    border-radius: 50%;
+    transition: all 0.3s;
+}
+.colors> li.black{
+    background: black;
+}
+.colors> li.red{
+    background: red;
+}
+.colors>li.purple{
+    background:purple;
+}
+.colors>li.blue{
+    background:blue;
+}
+.colors>li.green{
+    background:green;
+}
+.colors>li.active{
+    box-shadow: 0 0 3px rgba(0, 0, 0, 1); 
+    transform: scale(1.2);
 }
